--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             </ul>
 
                             <ul class="nav navbar-nav social">
-                                      <li><a href="mailto:macshine@stanford.edu"> <i class="fa fa-envelope"></i> </a></li>
+                                      <li><a href="mail to: macshine@stanford.edu"> <i class="fa fa-envelope"></i> </a></li>
                             </ul>
                         </div><!-- /.nav-collapse -->
                     </div><!-- /.navbar -->
@@ -58,8 +58,8 @@
                          <img src="/img/shine_profile.jpg" width="200px"/>
                     </div>
                     <div class="col-md-8" style="margin-top:20px">
-                        <h1 class="intro"><span>Hello</span> <span>I’m</span> Mac<span>, a cognitive neuroscientist </h1>
-                            <p style="font-size:16px">I am a postdoctoral fellow in the Poldrack Lab at Stanford University. I am interested in understanding the mechanisms of cognition and attention using functional brain imaging, both in health and disease. I received my PhD from Sydney University in 2013 (PI: Simon JG Lewis), my MBBS from Sydney University in 2007 and my BSc from the University of Sydney in 2003. </p>
+                        <h1 class="intro"><span>Hi,</span> <span>I’m</span> Mac<span>, a cognitive neuroscientist </h1>
+                            <p style="font-size:16px">I am interested in understanding the mechanisms of cognition and attention using functional brain imaging, both in health and disease. I am currently working with Russell Poldrack at Stanford University to understand the factors that drive the network-level reorganization of the human brain. I received my PhD from Sydney University in 2013 (PI: Simon JG Lewis), my MBBS from Sydney University in 2007 and my BSc from the University of Sydney in 2003. </p>
 
                     </div>
                         </div>
@@ -76,7 +76,7 @@
             <nav class="nav-footer">
 
                                   <ul>
-                                      <li><a href="mailto:macshine@stanford.edu"> <i class="fa fa-envelope"></i> </a></li>
+                                      <li><a href="mail to: macshine@stanford.edu"> <i class="fa fa-envelope"></i> </a></li>
                                   </ul>
 
                 <p class="credits text-center">&copy; All Rights Reserved 2015</p>
