--- a/publications/index.html
+++ b/publications/index.html
@@ -65,9 +65,50 @@
                                 <li>
                                     <a href="/publications/2016_neuron.pdf"> The Dynamics of Functional Brain Networks: Integrated Network States during Cognitive Task Performance </a>
                                 </li>
+                                <li>
+                                    <a href="/publications/2016_pnas.pdf"> Temporal metastates are associated with differential patterns of time-resolved connectivity, network topology, and attention </a>
+                                </li>
+                                <li>
+                                    <a href="/publications/2016_neuron.pdf"> Computational Specificity in the Human Brain </a>
+                                </li>
                             </ul>
                         </li>
                         <li>2015:
+                            <ul>
+                                <li>
+                                    <a href="/publications/"></a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>2014:
+                            <ul>
+                                <li>
+                                    <a href="/publications/"></a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>2013:
+                            <ul>
+                                <li>
+                                    <a href="/publications/"></a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>2012:
+                            <ul>
+                                <li>
+                                    <a href="/publications/"></a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>2011:
+                            <ul>
+                                <li>
+                                    <a href="/publications/"></a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>2010:
                             <ul>
                                 <li>
                                     <a href="/publications/"></a>
