--- a/publications/index.html
+++ b/publications/index.html
@@ -63,14 +63,27 @@
                         <li>2016:
                             <ul>
                                 <li>
-                                    <a href="/publications/2016_neuron.pdf"> The Dynamics of Functional Brain Networks: Integrated Network States during Cognitive Task Performance </a>
+                                    <a href="/publications/2016_neuron.pdf"> The Dynamics of Functional Brain Networks: Integrated Network States during Cognitive Task Performance - Neuron </a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2016_pnas.pdf"> Temporal metastates are associated with differential patterns of time-resolved connectivity, network topology, and attention </a>
+                                    <a href="/publications/2016_pnas.pdf"> Temporal Metastates are Associated with Differential Patterns of Time-Resolved Connectivity, Network Topology, and Attention - PNAS </a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2016_neuron.pdf"> Computational Specificity in the Human Brain </a>
+                                    <a href="/publications/2016_nbr.pdf"> Subcortical Contributions to Large-Scale Network Communication - Neuroscience and Biobehavioral Reviews </a>
                                 </li>
+                                <li>
+                                    <a href="/publications/2016_brain.pdf"> Cerebellar atrophy in Parkinson’s disease and its implication for network connectivity - Brain </a>
+                                </li>
+                                <li>
+                                    <a href="/publications/2016_sb.pdf"> Auditory hallucinations and the brain’s resting-state networks: findings and methodological observations - Schizophrenia Bulletin </a>
+                                </li>
+                                <li>
+                                    <a href="/publications/2016_cc.pdf"> Predictions penetrate perception: Converging insights from brain, behaviour and disorder - Consciousness and Cognition </a>
+                                </li>
+                                <li>
+                                    <a href="/publications/2016_bbs.pdf"> Computational Specificity in the Human Brain - Behavioral and Brain Sciences </a>
+                                </li>
+                                
                             </ul>
                         </li>
                         <li>2015:
