--- a/publications/index.html
+++ b/publications/index.html
@@ -63,25 +63,25 @@
                         <li>2016:
                             <ul>
                                 <li>
-                                    <a href="/publications/2016_neuron.pdf"> The Dynamics of Functional Brain Networks: Integrated Network States during Cognitive Task Performance - Neuron </a>
+                                    <a href="/publications/2016_neuron.pdf"> The Dynamics of Functional Brain Networks: Integrated Network States during Cognitive Task Performance (Neuron) </a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2016_pnas.pdf"> Temporal Metastates are Associated with Differential Patterns of Time-Resolved Connectivity, Network Topology, and Attention - PNAS </a>
+                                    <a href="/publications/2016_pnas.pdf"> Temporal Metastates are Associated with Differential Patterns of Time-Resolved Connectivity, Network Topology, and Attention (PNAS) </a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2016_nbr.pdf"> Subcortical Contributions to Large-Scale Network Communication - Neuroscience and Biobehavioral Reviews </a>
+                                    <a href="/publications/2016_nbr.pdf"> Subcortical Contributions to Large-Scale Network Communication (Neuroscience and Biobehavioral Reviews) </a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2016_brain.pdf"> Cerebellar atrophy in Parkinson’s disease and its implication for network connectivity - Brain </a>
+                                    <a href="/publications/2016_brain.pdf"> Cerebellar atrophy in Parkinson’s disease and its implication for network connectivity (Brain) </a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2016_sb.pdf"> Auditory hallucinations and the brain’s resting-state networks: findings and methodological observations - Schizophrenia Bulletin </a>
+                                    <a href="/publications/2016_sb.pdf"> Auditory hallucinations and the brain’s resting-state networks: findings and methodological observations (Schizophrenia Bulletin) </a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2016_cc.pdf"> Predictions penetrate perception: Converging insights from brain, behaviour and disorder - Consciousness and Cognition </a>
+                                    <a href="/publications/2016_cc.pdf"> Predictions penetrate perception: Converging insights from brain, behaviour and disorder (Consciousness and Cognition) </a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2016_bbs.pdf"> Computational Specificity in the Human Brain - Behavioral and Brain Sciences </a>
+                                    <a href="/publications/2016_bbs.pdf"> Computational Specificity in the Human Brain (Behavioral and Brain Sciences) </a>
                                 </li>
                                 
                             </ul>
@@ -89,42 +89,59 @@
                         <li>2015:
                             <ul>
                                 <li>
+                                    <a href="/publications/2015"></a>
+                                </li>
+                                <li>
                                     <a href="/publications/"></a>
                                 </li>
+                                <li>
+                                    <a href="/publications/"></a>
+                                </li>
+                                <li>
+                                    <a href="/publications/"></a>
+                                </li>
+                                <li>
+                                    <a href="/publications/"></a>
+                                </li>
+                                <li>
+                                    <a href="/publications/"></a>
+                                </li>
+                                
                             </ul>
                         </li>
                         <li>2014:
                             <ul>
                                 <li>
-                                    <a href="/publications/"></a>
+                                    <a href="/publications/2014_progneuro.pdf"> Tricks of the mind: visual hallucinations as disorders of attention (Progress in Neurobiology)</a>
+                                </li>
+                                <li>
+                                    <a href="/publications/2014_delegation.pdf"> Delegation to automaticity: the driving force behind human cognitive evolution? (Frontiers in Psychology)</a>
+                                </li>
+                                <li>
+                                    <a href="/publications/2014_ni.pdf"> Deficits in episodic memory retrieval reveal impaired default mode network connectivity in amnestic mild cognitive impairment (NeuroImage: Clinical)</a>
                                 </li>
                             </ul>
                         </li>
                         <li>2013:
                             <ul>
                                 <li>
-                                    <a href="/publications/"></a>
+                                    <a href="/publications/2013_brain1.pdf"> Exploring the cortical and subcortical fMRI changes associated with freezing in Parkinson's disease (Brain)</a>
+                                </li>
+                                <li>
+                                    <a href="/publications/2013_brain2.pdf"> Freezing of gait in Parkinson’s disease is associated with functional decoupling between the cognitive control network and the basal ganglia (Brain)</a>
+                                </li>
+                                <li>
+                                    <a href="/publications/2013_frontiers.pdf"> The role of frontostriatal impairment in freezing of gait in Parkinson’s disease (Frontiers in Systems Neuroscience)</a>
+                                </li>
+                                <li>
+                                    <a href="/publications/2013_hbm.pdf"> The role of dysfunctional attentional control networks in visual misperceptions in Parkinson’s Disease (Human Brain Mapping)</a>
                                 </li>
                             </ul>
                         </li>
-                        <li>2012:
+                        <li>2010-2012:
                             <ul>
                                 <li>
-                                    <a href="/publications/"></a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>2011:
-                            <ul>
-                                <li>
-                                    <a href="/publications/"></a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>2010:
-                            <ul>
-                                <li>
-                                    <a href="/publications/"></a>
+                                    <a href="/publications/2012_mds.pdf"> Investigating visual misperceptions in Parkinson’s disease: a novel behavioural paradigm (Movement Disorders)</a>
                                 </li>
                             </ul>
                         </li>
