--- a/publications/index.html
+++ b/publications/index.html
@@ -89,22 +89,22 @@
                         <li>2015:
                             <ul>
                                 <li>
-                                    <a href="/publications/2015_npj"> Abnormal connectivity between the default mode and the visual system underlies the manifestation of visual hallucinations in Parkinson’s disease: a task-based fMRI study (Nature Parkinson's Disease)</a>
+                                    <a href="/publications/2015_npj.pdf"> Abnormal connectivity between the default mode and the visual system underlies the manifestation of visual hallucinations in Parkinson’s disease: a task-based fMRI study (Nature Parkinson's Disease)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2015_ni"> Estimation of dynamic functional connectivity using Multiplication of Temporal Derivatives (NeuroImage)</a>
+                                    <a href="/publications/2015_ni.pdf"> Estimation of dynamic functional connectivity using Multiplication of Temporal Derivatives (NeuroImage)</a>
                                 </li>
                                 <li>
                                     <a href="/publications/"></a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2015_royal"> Imagine that: elevated sensory strength of mental imagery in individuals with Parkinson’s disease and visual hallucinations (Royal Society B)</a>
+                                    <a href="/publications/2015_royal.pdf"> Imagine that: elevated sensory strength of mental imagery in individuals with Parkinson’s disease and visual hallucinations (Royal Society B)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2015_hbm"> Dopaminergic Basis for Impairments in Functional Connectivity Across Subdivisions of the Striatum in Parkinson’s Disease (Human Brain Mapping)</a>
+                                    <a href="/publications/2015_hbm.pdf"> Dopaminergic Basis for Impairments in Functional Connectivity Across Subdivisions of the Striatum in Parkinson’s Disease (Human Brain Mapping)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2015_natcomms"> Long-term neural and physiological phenotyping of a single human (Nature Communications)</a>
+                                    <a href="/publications/2015_natcomms.pdf"> Long-term neural and physiological phenotyping of a single human (Nature Communications)</a>
                                 </li>
                                 
                             </ul>
