--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                     <a href="https://scholar.google.com/citations?user=Uxvu7CsAAAAJ">Google Scholar</a>
                                 </li>
 				<li>
-                                   <a href="/publications/">Publications</a>
+                                   <a href="/publications/">Key Publications</a>
                                </li>
                             </ul>
                             <ul class="nav navbar-nav social">
