--- a/publications/index.html
+++ b/publications/index.html
@@ -95,7 +95,7 @@
                                     <a href="/publications/2015_ni.pdf"> Estimation of dynamic functional connectivity using Multiplication of Temporal Derivatives (NeuroImage)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/"></a>
+                                    <a href="/publications/2015_bc.pdf"> Estimating large-scale network convergence in the human functional connectome (Brain Connectivity)</a>
                                 </li>
                                 <li>
                                     <a href="/publications/2015_royal.pdf"> Imagine that: elevated sensory strength of mental imagery in individuals with Parkinson’s disease and visual hallucinations (Royal Society B)</a>
