--- a/cv/index.html
+++ b/cv/index.html
@@ -44,7 +44,9 @@
                                 <li>
                                     <a href="https://scholar.google.com/citations?user=Uxvu7CsAAAAJ">Google Scholar</a>
                                 </li>
-                         
+                            	<li>
+                                   <a href="/publications/">Key Publications</a>
+                               </li>
                            </ul>
 
                             <ul class="nav navbar-nav social">
