--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                          <img src="/img/shine_profile.jpg" width="200px"/>
                     </div>
                     <div class="col-md-8" style="margin-top:20px">
-                        <h1 class="intro"><span>Hi,</span> <span>I’m</span> Mac<span>, a cognitive neuroscientist </h1>
-                            <p style="font-size:16px">I am interested in understanding the mechanisms of cognition and attention using functional brain imaging, both in health and disease. I am currently working with Russell Poldrack at Stanford University to understand the factors that drive the network-level reorganization of the human brain. I received my PhD from Sydney University in 2013 (PI: Simon JG Lewis), my MBBS from Sydney University in 2007 and my BSc from the University of Sydney in 2003. </p>
+                        <h1 class="intro"><span>Hi,</span> <span>I’m</span> Mac<span> </h1>
+                            <p style="font-size:16px">I am cognitive neuroscientist interested in understanding the mechanisms of cognition and attention using functional brain imaging, both in health and disease. I am currently working with Russell Poldrack at Stanford University to understand the factors that drive the network-level reorganization of the human brain. I received my PhD from Sydney University in 2013 (PI: Simon JG Lewis), my MBBS from Sydney University in 2007 and my BSc from the University of Sydney in 2003. </p>
 
                     </div>
                         </div>
