--- a/publications/index.html
+++ b/publications/index.html
@@ -89,7 +89,7 @@
                         <li>2015:
                             <ul>
                                 <li>
-                                    <a href="/publications/2015_npj.pdf"> Abnormal connectivity between the default mode and the visual system underlies the manifestation of visual hallucinations in Parkinson’s disease (Nature Parkinson's Disease)</a>
+                                    <a href="/publications/2015_npj.pdf"> Abnormal connectivity between the default mode and the visual system underlies the manifestation of visual hallucinations in PD (Nature Parkinson's Disease)</a>
                                 </li>
                                 <li>
                                     <a href="/publications/2015_ni.pdf"> Estimation of dynamic functional connectivity using Multiplication of Temporal Derivatives (NeuroImage)</a>
