--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                                 <li>
                                     <a href="https://scholar.google.com/citations?user=Uxvu7CsAAAAJ">Google Scholar</a>
                                 </li>
+				<li>
+                                    <a href="https://publons.com/author/357271/james-m-shine#profile">Publons</a>
+                                </li>  
                             </ul>
                             <ul class="nav navbar-nav social">
                                       <li><a href="mail to: macshine@stanford.edu"> <i class="fa fa-envelope"></i> </a></li>
