--- a/publications/index.html
+++ b/publications/index.html
@@ -62,6 +62,13 @@
                 <div class="row">
                     <div class="col-md-12 col-lg-12" style="margin-left:50px">
                         <ul>
+                        <li>2017:
+                            <ul>
+                                <li>
+                                    <a href="/publications/2017_neuroimage.pdf"> Principles of Dynamic Network Reconfiguration Across Diverse Brain States (NeuroImage) </a>
+                                </li>                                
+                            </ul>
+                        </li>
                         <li>2016:
                             <ul>
                                 <li>
