--- a/publications/index.html
+++ b/publications/index.html
@@ -53,7 +53,7 @@
                            </ul>
 
                             <ul class="nav navbar-nav social">
-                                      <li><a href="mail to: macshine@stanford.edu"> <i class="fa fa-envelope"></i> </a></li>
+                                      <li><a href="mail to: mac.shine@sydney.edu.au"> <i class="fa fa-envelope"></i> </a></li>
                             </ul>
                         </div><!-- /.nav-collapse -->
                     </div><!-- /.navbar -->
@@ -166,7 +166,7 @@
             <nav class="nav-footer">
 
                                   <ul>
-                                      <li><a href="mail to: macshine@stanford.edu"> <i class="fa fa-envelope"></i> </a></li>
+                                      <li><a href="mail to: mac.shine@sydney.edu.au"> <i class="fa fa-envelope"></i> </a></li>
                                   </ul>
 
                 <p class="credits text-center">&copy; All Rights Reserved 2015</p>
