--- a/publications/index.html
+++ b/publications/index.html
@@ -65,6 +65,11 @@
                         <li>2017:
                             <ul>
                                 <li>
+                                    <a href="/publications/2017_jneuro.pdf"> Distinct Patterns of Temporal and Directional Connectivity among Intrinsic Networks in the Human Brain (Journal of Neuroscience) </a>
+                                </li>                                
+                            </ul>
+                            <ul>
+                                <li>
                                     <a href="/publications/2017_neuroimage.pdf"> Principles of Dynamic Network Reconfiguration Across Diverse Brain States (NeuroImage) </a>
                                 </li>                                
                             </ul>
