--- a/publications/index.html
+++ b/publications/index.html
@@ -62,7 +62,24 @@
                 <div class="row">
                     <div class="col-md-12 col-lg-12" style="margin-left:50px">
                         <ul>
-                        <li>2017:
+                        <li>2018:
+                            <ul>
+                                <li>
+                                    <a href="/publications/2018_elife.pdf"> The modulation of neural gain facilitates a transition between functional segregation and integration in the brain (eLife) </a>
+                                </li>                                
+                            </ul>
+                            <ul>
+                                <li>
+                                    <a href="/publications/2018_netneuro.pdf"> Catecholaminergic Manipulation Alters Dynamic Network Topology Across Cognitive States (Network Neuroscience) </a>
+                                </li>                                
+                            </ul>
+                            <ul>
+                                <li>
+                                    <a href="/publications/2018_cc.pdf"> Frontoparietal Activity Interacts With Task-Evoked Changes in Functional Connectivity (Cerebral Cortex) </a>
+                                </li>                                
+                            </ul>
+                        </li>
+                            <li>2017:
                             <ul>
                                 <li>
                                     <a href="/publications/2017_jneuro.pdf"> Distinct Patterns of Temporal and Directional Connectivity among Intrinsic Networks in the Human Brain (Journal of Neuroscience) </a>
