--- a/publications/index.html
+++ b/publications/index.html
@@ -65,7 +65,7 @@
                         <li>2018:
                             <ul>
                                 <li>
-                                    <a href="/publications/2018_elife.pdf"> The modulation of neural gain facilitates a transition between functional segregation and integration in the brain (eLife) </a>
+                                    <a href="/publications/2018_elife.pdf"> The Modulation of Neural Gain Facilitates a Transition Between Functional Segregation and Integration in the Brain (eLife) </a>
                                 </li>                                
                             </ul>
                             <ul>
