--- a/publications/index.html
+++ b/publications/index.html
@@ -75,6 +75,11 @@
                             </ul>
                             <ul>
                                 <li>
+                                    <a href="/publications/2018_tins.pdf"> Understanding the Brain, By Default (Trends in Neurosciences) </a>
+                                </li>                                
+                            </ul>
+                            <ul>
+                                <li>
                                     <a href="/publications/2018_brain.pdf"> The Functional Network Signature of Heterogeneity in Freezing of Gait (Brain) </a>
                                 </li>                                
                             </ul>
