--- a/publications/index.html
+++ b/publications/index.html
@@ -65,6 +65,11 @@
                         <li>2018:
                             <ul>
                                 <li>
+                                    <a href="/publications/2018_natneuro.pdf"> The dynamic basis of cognition: an integrative core under the control of the ascending neuromodulatory system (biorxiv) </a>
+                                </li>                                
+                            </ul>
+                            <ul>
+                                <li>
                                     <a href="/publications/2018_elife.pdf"> The Modulation of Neural Gain Facilitates a Transition Between Functional Segregation and Integration in the Brain (eLife) </a>
                                 </li>                                
                             </ul>
