--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="col-md-8" style="margin-top:20px">
                         <h1 class="intro"><span></span> <span></span> Mac Shine<span> </h1>
-                            <p style="font-size:16px">I'm a cognitive neuroscientist working to understand the mechanisms of cognition and attention using functional brain imaging, both in health and disease.
+                            <p style="font-size:16px">I am a cognitive neuroscientist working to understand the mechanisms of cognition and attention using functional brain imaging, both in health and disease.
 				    
 				    I am currently working as a CJ Martin/SOAR fellow at The University of Sydney to understand the factors that drive the network-level reorganization of the human brain.
 				    
