--- a/publications/index.html
+++ b/publications/index.html
@@ -62,12 +62,19 @@
                 <div class="row">
                     <div class="col-md-12 col-lg-12" style="margin-left:50px">
                         <ul>
-                        <li>2018:
+                        <li>2019:
                             <ul>
                                 <li>
-                                    <a href="/publications/2018_natneuro.pdf"> The dynamic basis of cognition: an integrative core under the control of the ascending neuromodulatory system (biorxiv) </a>
+                                    <a href="/publications/2019_natneuro.pdf"> Human cognition involves the dynamic integration of neural activity and neuromodulatory systems (Nature Neuroscience) </a>
                                 </li>                                
                             </ul>
+                            <ul>
+                                <li>
+                                    <a href="/publications/2019_brain.pdf"> Dopamine Depletion Alters Macroscopic Network Dynamics in Parkinson’s disease (Brain) </a>
+                                </li>                                
+                            </ul>
+                        </li>
+                        <li>2018:
                             <ul>
                                 <li>
                                     <a href="/publications/2018_elife.pdf"> The Modulation of Neural Gain Facilitates a Transition Between Functional Segregation and Integration in the Brain (eLife) </a>
