--- a/publications/index.html
+++ b/publications/index.html
@@ -65,7 +65,7 @@
                         <li>2019:
                             <ul>
                                 <li>
-                                    <a href="/publications/2019_natureneuro.pdf"> Human cognition involves the dynamic integration of neural activity and neuromodulatory systems (Nature Neuroscience) </a>
+                                    <a href="/publications/2019_natureneuro.pdf"> Human Cognition Involves the Dynamic Integration of Neural Activity and Neuromodulatory Systems (Nature Neuroscience) </a>
                                 </li>                                
                             </ul>
                             <ul>
@@ -125,13 +125,13 @@
                                     <a href="/publications/2016_nbr.pdf"> Subcortical Contributions to Large-Scale Network Communication (Neuroscience and Biobehavioral Reviews) </a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2016_brain.pdf"> Cerebellar atrophy in Parkinson’s disease and its implication for network connectivity (Brain) </a>
+                                    <a href="/publications/2016_brain.pdf"> Cerebellar Atrophy in Parkinson’s disease and its Implication for Network Connectivity (Brain) </a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2016_sb.pdf"> Auditory hallucinations and the brain’s resting-state networks: findings and methodological observations (Schizophrenia Bulletin) </a>
+                                    <a href="/publications/2016_sb.pdf"> Auditory Hallucinations and the Brain’s Resting-State Networks: Findings and Methodological Observations (Schizophrenia Bulletin) </a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2016_cc.pdf"> Predictions penetrate perception: Converging insights from brain, behaviour and disorder (Consciousness and Cognition) </a>
+                                    <a href="/publications/2016_cc.pdf"> Predictions Penetrate Perception: Converging Insights from Brain, Behaviour and Disorder (Consciousness and Cognition) </a>
                                 </li>
                                 <li>
                                     <a href="/publications/2016_bbs.pdf"> Computational Specificity in the Human Brain (Behavioral and Brain Sciences) </a>
@@ -142,22 +142,22 @@
                         <li>2015:
                             <ul>
                                 <li>
-                                    <a href="/publications/2015_npj.pdf"> Abnormal connectivity between the default mode and the visual system underlies the manifestation of visual hallucinations in PD (Nature Parkinson's Disease)</a>
+                                    <a href="/publications/2015_npj.pdf"> Abnormal Connectivity Between the Default Mode and the Visual System Underlies the Manifestation of Visual Hallucinations in Parkinson's Disease (Nature Parkinson's Disease)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2015_ni.pdf"> Estimation of dynamic functional connectivity using Multiplication of Temporal Derivatives (NeuroImage)</a>
+                                    <a href="/publications/2015_ni.pdf"> Estimation of Dynamic Functional Connectivity using Multiplication of Temporal Derivatives (NeuroImage)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2015_bc.pdf"> Estimating large-scale network convergence in the human functional connectome (Brain Connectivity)</a>
+                                    <a href="/publications/2015_bc.pdf"> Estimating Large-Scale Network Convergence in the Human Functional Connectome (Brain Connectivity)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2015_royal.pdf"> Imagine that: elevated sensory strength of mental imagery in individuals with Parkinson’s disease and visual hallucinations (Royal Society B)</a>
+                                    <a href="/publications/2015_royal.pdf"> Imagine That: Elevated Sensory Strength of Mental Imagery in Individuals with Parkinson’s disease and Visual Hallucinations (Royal Society B)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2015_hbm.pdf"> Dopaminergic Basis for Impairments in Functional Connectivity Across Subdivisions of the Striatum in Parkinson’s Disease (Human Brain Mapping)</a>
+                                    <a href="/publications/2015_hbm.pdf"> Dopaminergic Basis for Impairments in Functional Connectivity Across Subdivisions of the Striatum in Parkinson’s disease (Human Brain Mapping)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2015_natcomms.pdf"> Long-term neural and physiological phenotyping of a single human (Nature Communications)</a>
+                                    <a href="/publications/2015_natcomms.pdf"> Long-term Neural and Physiological Phenotyping of a Single Human (Nature Communications)</a>
                                 </li>
                                 
                             </ul>
@@ -165,36 +165,36 @@
                         <li>2014:
                             <ul>
                                 <li>
-                                    <a href="/publications/2014_progneuro.pdf"> Tricks of the mind: visual hallucinations as disorders of attention (Progress in Neurobiology)</a>
+                                    <a href="/publications/2014_progneuro.pdf"> Tricks of the Mind: Visual Hallucinations as Disorders of Attention (Progress in Neurobiology)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2014_delegation.pdf"> Delegation to automaticity: the driving force behind human cognitive evolution? (Frontiers in Psychology)</a>
+                                    <a href="/publications/2014_delegation.pdf"> Delegation to Automaticity: the Driving Force Behind Human Cognitive Evolution? (Frontiers in Psychology)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2014_ni.pdf"> Deficits in episodic memory retrieval reveal impaired default mode network connectivity in amnestic mild cognitive impairment (NeuroImage: Clinical)</a>
+                                    <a href="/publications/2014_ni.pdf"> Deficits in Episodic Memory Retrieval Reveal Impaired Default Mode Network Connectivity in Amnestic Mild Cognitive Impairment (NeuroImage: Clinical)</a>
                                 </li>
                             </ul>
                         </li>
                         <li>2013:
                             <ul>
                                 <li>
-                                    <a href="/publications/2013_brain1.pdf"> Exploring the cortical and subcortical fMRI changes associated with freezing in Parkinson's disease (Brain)</a>
+                                    <a href="/publications/2013_brain1.pdf"> Exploring the Cortical and Subcortical fMRI Changes Associated with Freezing in Parkinson's disease (Brain)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2013_brain2.pdf"> Freezing of gait in Parkinson’s disease is associated with functional decoupling between the cognitive control network and the basal ganglia (Brain)</a>
+                                    <a href="/publications/2013_brain2.pdf"> Freezing of Gait in Parkinson’s disease is Associated with Functional Decoupling Between the Cognitive Control Network and the Basal Ganglia (Brain)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2013_frontiers.pdf"> The role of frontostriatal impairment in freezing of gait in Parkinson’s disease (Frontiers in Systems Neuroscience)</a>
+                                    <a href="/publications/2013_frontiers.pdf"> The Role of Frontostriatal Impairment in Freezing of Gait in Parkinson’s disease (Frontiers in Systems Neuroscience)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2013_hbm.pdf"> The role of dysfunctional attentional control networks in visual misperceptions in Parkinson’s Disease (Human Brain Mapping)</a>
+                                    <a href="/publications/2013_hbm.pdf"> The Role of Dysfunctional Attentional Control Networks in Visual Misperceptions in Parkinson’s disease (Human Brain Mapping)</a>
                                 </li>
                             </ul>
                         </li>
                         <li>2012:
                             <ul>
                                 <li>
-                                    <a href="/publications/2012_mds.pdf"> Investigating visual misperceptions in Parkinson’s disease: a novel behavioural paradigm (Movement Disorders)</a>
+                                    <a href="/publications/2012_mds.pdf"> Investigating Visual Misperceptions in Parkinson’s disease: a Novel Behavioural Paradigm (Movement Disorders)</a>
                                 </li>
                             </ul>
                         </li>
