--- a/publications/index.html
+++ b/publications/index.html
@@ -73,6 +73,11 @@
                                     <a href="/publications/2019_brain.pdf"> Dopamine Depletion Alters Macroscopic Network Dynamics in Parkinson’s disease (Brain) </a>
                                 </li>                                
                             </ul>
+                            <ul>
+                                <li>
+                                    <a href="/publications/2019_pnas.pdf"> Hippocampal atrophy and intrinsic brain network dysfunction relate to alterations in mind wandering in neurodegeneration (PNAS) </a>
+                                </li>                                
+                            </ul>
                         </li>
                         <li>2018:
                             <ul>
