--- a/publications/index.html
+++ b/publications/index.html
@@ -147,7 +147,7 @@
                         <li>2015:
                             <ul>
                                 <li>
-                                    <a href="/publications/2015_npj.pdf"> Abnormal Connectivity Between the Default Mode and the Visual System Underlies the Manifestation of Visual Hallucinations in Parkinson's Disease (Nature Parkinson's Disease)</a>
+                                    <a href="/publications/2015_npj.pdf"> Abnormal Connectivity Between the Default Mode and the Visual System Underlies the Manifestation of Visual Hallucinations in Parkinson's Disease (npj Parkinson's Disease)</a>
                                 </li>
                                 <li>
                                     <a href="/publications/2015_ni.pdf"> Estimation of Dynamic Functional Connectivity using Multiplication of Temporal Derivatives (NeuroImage)</a>
