--- a/publications/index.html
+++ b/publications/index.html
@@ -75,7 +75,7 @@
                             </ul>
                             <ul>
                                 <li>
-                                    <a href="/publications/2019_pnas.pdf"> Hippocampal atrophy and intrinsic brain network dysfunction relate to alterations in mind wandering in neurodegeneration (PNAS) </a>
+                                    <a href="/publications/2019_pnas.pdf"> Hippocampal Atrophy and Intrinsic Brain Network Dysfunction Relate to Alterations in Mind Wandering in Neurodegeneration (PNAS) </a>
                                 </li>                                
                             </ul>
                         </li>
