--- a/publications/index.html
+++ b/publications/index.html
@@ -70,6 +70,11 @@
                             </ul>
                             <ul>
                                 <li>
+                                    <a href="/publications/2019_tics.pdf"> Neuromodulatory Influences on Integration and Segregation in the Brain (Trends in Cognitive Sciences) </a>
+                                </li>                                
+                            </ul>
+                            <ul>
+                                <li>
                                     <a href="/publications/2019_brain.pdf"> Dopamine Depletion Alters Macroscopic Network Dynamics in Parkinson’s disease (Brain) </a>
                                 </li>                                
                             </ul>
