--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 				    
 				    I am currently working as a Robinson/SOAR fellow at The University of Sydney to understand the factors that drive the network-level reorganization of the human brain.
 				 
-				    I completed my post-doc with Russell Poldrack at Stanford University, received my PhD from Sydney University in 2013 (PI: Simon JG Lewis), my MBBS from Sydney University in 2007 and my BSc from the University of Sydney in 2003. </p>
+				    I completed my post-doc with Russell Poldrack at Stanford University, received my PhD from Sydney University in 2013 (PI: Simon JG Lewis), my MBBS from Sydney University in 2007 and my BSc from the University of Sydney in 2003.
+
+                                    Contact me via email me at mac dot shine at sydney dot edu dot au or on Twitter @jmacshine</p>
 
                     </div>
                         </div>
